<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">安全中心</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Static_MobileAcceleration_tv">手机加速</string>
    <string name="Static_PrivacySpace_tv">隐私空间</string>
    <string name="Static_Separators_iv"></string>
    <string name="Static_SecurityCenter_tv">安全中心</string>
    
    <!-- MemorySpeedUp start-->
    <string name="StaticTotalMemory">总内存:</string>
    <string name="StaticRestMemory">剩余内存:</string>
    <string name="tv_totalMemory">xxx M</string>
    <string name="tv_availMemory">xxx M</string>
    <string name="memory_accelerate">内存加速</string>
    <string name="StaticOneKeyAccelerate">一键加速</string>
    <string name="one_key_accelerating">正在清理中 \u2026</string>
    <string name="one_key_accelerate_done">一键清理完毕</string>
    <string name="detail_process">进程详情</string>
	<!-- 主标题 -->
	<string name="runningProgress">正在运行的应用程序</string>
	<string name="whiteList">应用白名单</string>
	<string name="autoRun">应用自启动管理</string>
	<string name="runningService">正在运行的服务</string>
	<!-- 副标题 -->
	<string name="tv_number01">xx</string>
	<string name="tv_number02">xx</string>
	<string name="tv_number03">xx</string>
	<string name="tv_number04">xx</string>
	<string name="tv_gray01">个后台进程</string>
	<string name="tv_gray02">个应用受到白名单保护，一键加速不会被清理</string>
	<string name="tv_gray03">个应用允许自启</string>
	<string name="tv_gray04">个正在运行的后台服务</string>
	<string name="Static_RunningProgress_tv_bar0">正在运行应用</string>
	<string name="Static_RunningProgress_tv_bar1">个，可用内存</string>
	<string name="tv_running_progress_app_name">默认应用程序名称</string>
	<string name="tv_running_progress_single_memsize">xxMB</string>
	<string name="btn_running_progress">stop</string>
	<string name="tv_running_progress_protected_by_whitelist">" | 受白名单保护"</string>
	<string name="Static_iv_appIcon">appIcon</string>
	<string name="Static_iv_single_line">main listitem gray line</string>
	<string name="Static_iv_main_single_line">main listview single line</string>
	<string name="Static_iv_detail_appIcon">detail appIcon</string>
	<string name="static_iv_detail_processName">进程：</string>
	<string name="static_iv_detail_packageName">包名：</string>
	<string name="static_iv_detail_appName">程序名：</string>
	<string name="static_iv_detail_pid">pid:</string>
	<string name="static_iv_detail_uid">uid:</string>
	<string name="static_iv_detail_memSize">占用内存：</string>
	<string name="bt_detail_stopProcess">停止该应用</string>
	<string name="static_bt_running_progress_stop">stop</string>
	<string name="static_tv_whitelist_bar">被勾选的应用，一键加速时不被清理</string>
	<string name="tv_white_list_app_name">默认程序名</string>
	<!-- MemorySpeedUp end -->
	
	<!-- PrivacySpace start -->
	<string name="privacy_space">隐私空间</string>
	<string name="private_communicate">私密通讯</string>
	<string name="add_private_contacts">添加私密联系人</string>
	
	<string name="private_photo">私密图片</string>
	<string name="private_file">私密文件</string>
	<string name="app_lock">应用密码锁</string>
    <string name="iv_privacyspace_item_icon">privacyspace_item_icon</string>
    <string name="static_privacyspace_tv_title">This is Test TitleText</string>
    <string name="static_privacyspace_tv_subtitle">This is Test SubTitleText</string>
    <string name="static_back_image">back_image</string>
    <string name="static_setting_image">setting_image</string>
    <string name="static_custom_title_center_text">HeadCenterText</string>
    
    <!-- Gesture code starting -->
    <string name="setup_gesture_code">设置手势密码</string>
    <string name="setup_gesture_pattern">绘制解锁图案</string>
    <string name="setup_gesture_pattern_again">再次绘制解锁图案</string>
    <string name="forget_gesture_code">忘记手势密码?</string>
    <string name="use_other_account_login">用其他账号登录</string>
    <string name="set_gesture_pattern">绘制解锁图案</string>
    <string name="set_gesture_pattern_reason">设置手势密码，防止他人未经授权查看</string>
    <string name="reset_gesture_code">重新设置手势密码</string>
    <!-- Gesture code starting End -->
    <!-- PrivacySpace end -->
    <string name="static_private_contact_empty">There\'s no text messages and call logs.</string>
    <string name="static_private_contact_empty_wording">Your conversations with private contacts will be safe here.</string>
    <string name="contacts_count">共计%1$d项</string>
    

</resources>
