<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/tv_black01"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/runningProgress"
        />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <TextView 
        android:id="@+id/tv_number01"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:alpha="0.7"
        android:textColor="@color/black"
        android:text="@string/tv_number01"
        />
    <TextView 
        android:id="@+id/tv_gray01"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:alpha="0.7"
        android:textColor="@color/black"
        android:text="@string/tv_gray01"
        />
    </LinearLayout>
    <ImageView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/imageview_seperator"
        android:background="@color/gray"
        android:contentDescription="@string/Static_Separators_iv" />

</LinearLayout>
