<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".memoryspeedup.MemorySpeedUpActivity" >

    <TableRow
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/black"
            android:text="@string/StaticTotalMemory" >
        </TextView>

        <TextView
            android:id="@+id/tv_totalMemory"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/tv_totalMemory" >
        </TextView>
    </TableRow>

    <TableRow
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/black"
            android:text="@string/StaticRestMemory" >
        </TextView>

        <TextView
            android:id="@+id/tv_availMemory"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/tv_availMemory" >
        </TextView>
    </TableRow>

    <TableRow
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:id="@+id/bt_oneKeyAccelerate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/one_key_accelerate_btn"
            android:onClick="oneKeyAccelerate"
            android:text="@string/StaticOneKeyAccelerate" />
    </TableRow>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/imageview_seperator"
        android:background="@color/gray"
        android:contentDescription="@string/Static_Separators_iv" />

    <TableRow
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4" >

        <ListView
            android:id="@+id/lv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:divider="@null" >
        </ListView>
    </TableRow>

</TableLayout>