<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:descendantFocusability="blocksDescendants">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/iv_appIcon"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:contentDescription="@string/Static_iv_appIcon"
            android:src="@drawable/default_app_icon" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="3"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/running_progress_tv_app_name"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="7dp"
                android:text="@string/tv_running_progress_app_name"
                android:textColor="@color/black"
                android:textSize="23sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/running_progress_tv_single_memsize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/tv_running_progress_single_memsize"
                    android:alpha="0.7"
        			android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/running_progress_tv_protected_by_whitelist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/tv_running_progress_protected_by_whitelist"
                    android:alpha="0.7"
        			android:textColor="@color/black"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>
        <Button 
            android:id="@+id/running_progress_bt_stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/static_bt_running_progress_stop"
            android:layout_gravity="center"
            android:focusable="false"
            />
    </TableRow>

</TableLayout>